...
                          physics: const NeverScrollableScrollPhysics(),
                          child: Opacity(
                            opacity: _showLoginForm ? 0 : 1,
                            child: Column(
                              children: [
                                LoginButton(
                                  key: const Key('btn_show_login_form'),
                                  text: "Login",
                                  onTap: _toggleLoginForm,
                                  withColor: true,
                                ),
                                const SizedBox(height: 16),
                                Row(
...
                                  ),
                                ),
                                const SizedBox(height: 24),

                                // Inputs
                                TextInputLogin(
                                  key: const Key('input_email'),
                                  hint: 'Email',
                                  controller: _controllerEmail,
                                  keyboardType: TextInputType.emailAddress,
                                ),
                                const SizedBox(height: 16),

                                TextInputLogin(
                                  key: const Key('input_password'),
                                  hint: 'Password',
                                  isPassword: true,
                                  controller: _controllerPassword,
                                ),
                                const SizedBox(height: 24),

                                // Submit Button
                                LoginButton(
                                  key: const Key('btn_submit_login'),
                                  text: "Login",
                                  onTap: () => signIn(),
                                  withColor: true,
                                ),
                                
                                const SizedBox(height: 20),
...
