...
            children: List.generate(
              tabs.length,
              (index) {
                final label = tabs.keys.elementAt(index);
                return BottomAppBarItem(
                  key: label == 'Kegiatan' 
                      ? const Key('kegiatan_tab') 
                      : label == 'Profil' 
                          ? const Key('profil_tab') 
                          : null,
                  icon: index == 0
                      ? Icon(
                          MoonIcons.generic_home_32_regular,
                          size: 24,
                          color: widget.navigationShell.currentIndex == index
...
